loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: '<-' expected but integer literal found.
for (compteur 1 <- 1 to 10) {
              ^LoopCourse:12: error: illegal start of simple expression
	}
        ^